--- a/src/main/java/PacoteInterfaceVisual/PaginaCriarConta.form
+++ b/src/main/java/PacoteInterfaceVisual/PaginaCriarConta.form
@@ -129,6 +129,8 @@
           </Properties>
           <Events>
             <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="CampoInserirNomeActionPerformed"/>
+            <EventHandler event="keyPressed" listener="java.awt.event.KeyListener" parameters="java.awt.event.KeyEvent" handler="CampoInserirNomeKeyPressed"/>
+            <EventHandler event="keyTyped" listener="java.awt.event.KeyListener" parameters="java.awt.event.KeyEvent" handler="CampoInserirNomeKeyTyped"/>
           </Events>
         </Component>
         <Component class="javax.swing.JButton" name="BotaoAvancarCriarConta">
@@ -178,6 +180,8 @@
           </Properties>
           <Events>
             <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="CampoInserirEmailActionPerformed"/>
+            <EventHandler event="keyPressed" listener="java.awt.event.KeyListener" parameters="java.awt.event.KeyEvent" handler="CampoInserirEmailKeyPressed"/>
+            <EventHandler event="keyTyped" listener="java.awt.event.KeyListener" parameters="java.awt.event.KeyEvent" handler="CampoInserirEmailKeyTyped"/>
           </Events>
         </Component>
       </SubComponents>
