--- a/src/main/java/PacoteInterfaceVisual/PaginaAlterarDados.form
+++ b/src/main/java/PacoteInterfaceVisual/PaginaAlterarDados.form
@@ -76,7 +76,7 @@
                   <EmptySpace pref="270" max="32767" attributes="0"/>
               </Group>
               <Group type="102" alignment="1" attributes="0">
-                  <EmptySpace max="32767" attributes="0"/>
+                  <EmptySpace pref="511" max="32767" attributes="0"/>
                   <Group type="103" groupAlignment="0" attributes="0">
                       <Group type="102" alignment="1" attributes="0">
                           <Component id="PerguntasFrequentes" min="-2" max="-2" attributes="0"/>
@@ -110,8 +110,8 @@
                   <Component id="AlterarEmailTitulo" min="-2" max="-2" attributes="0"/>
                   <EmptySpace max="-2" attributes="0"/>
                   <Group type="103" groupAlignment="3" attributes="0">
-                      <Component id="CampoInserirEmail" alignment="3" min="-2" pref="34" max="-2" attributes="0"/>
                       <Component id="BotaoAlterarEmail" alignment="3" min="-2" max="-2" attributes="0"/>
+                      <Component id="CampoInserirEmail" alignment="3" min="-2" pref="34" max="-2" attributes="0"/>
                   </Group>
                   <EmptySpace min="-2" pref="22" max="-2" attributes="0"/>
                   <Component id="AlterarTelefoneTitulo" min="-2" max="-2" attributes="0"/>
@@ -230,19 +230,6 @@
             <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="AlterarTelefoneTituloActionPerformed"/>
           </Events>
         </Component>
-        <Component class="javax.swing.JTextField" name="CampoInserirEmail">
-          <Properties>
-            <Property name="text" type="java.lang.String" value="email@email.com"/>
-            <Property name="border" type="javax.swing.border.Border" editor="org.netbeans.modules.form.editors2.BorderEditor">
-              <Border info="org.netbeans.modules.form.compat2.border.SoftBevelBorderInfo">
-                <BevelBorder/>
-              </Border>
-            </Property>
-          </Properties>
-          <Events>
-            <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="CampoInserirEmailActionPerformed"/>
-          </Events>
-        </Component>
         <Component class="javax.swing.JTextField" name="CampoInserirTelefone">
           <Properties>
             <Property name="text" type="java.lang.String" value="(00) 90000-0000"/>
@@ -289,6 +276,20 @@
           </Properties>
           <Events>
             <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="BotaoVoltarActionPerformed"/>
+          </Events>
+        </Component>
+        <Component class="javax.swing.JTextField" name="CampoInserirEmail">
+          <Properties>
+            <Property name="border" type="javax.swing.border.Border" editor="org.netbeans.modules.form.editors2.BorderEditor">
+              <Border info="org.netbeans.modules.form.compat2.border.SoftBevelBorderInfo">
+                <BevelBorder/>
+              </Border>
+            </Property>
+          </Properties>
+          <Events>
+            <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="CampoInserirEmailActionPerformed"/>
+            <EventHandler event="keyPressed" listener="java.awt.event.KeyListener" parameters="java.awt.event.KeyEvent" handler="CampoInserirEmailKeyPressed"/>
+            <EventHandler event="keyTyped" listener="java.awt.event.KeyListener" parameters="java.awt.event.KeyEvent" handler="CampoInserirEmailKeyTyped"/>
           </Events>
         </Component>
       </SubComponents>
