--- a/src/main/java/PacoteInterfaceVisual/PaginaPagar.form
+++ b/src/main/java/PacoteInterfaceVisual/PaginaPagar.form
@@ -79,12 +79,12 @@
                                           <EmptySpace type="separate" max="-2" attributes="0"/>
                                           <Component id="BotaoPagarViaBoleto" min="-2" max="-2" attributes="0"/>
                                       </Group>
+                                      <Component id="PagamentoBoletoTitulo" alignment="0" min="-2" max="-2" attributes="0"/>
                                       <Group type="102" alignment="0" attributes="0">
                                           <Component id="CampoInserirQuantiaDeposito" min="-2" pref="220" max="-2" attributes="0"/>
                                           <EmptySpace type="separate" max="-2" attributes="0"/>
                                           <Component id="BotaoGerarBoletoDeposito" min="-2" max="-2" attributes="0"/>
                                       </Group>
-                                      <Component id="PagamentoBoletoTitulo" alignment="0" min="-2" max="-2" attributes="0"/>
                                   </Group>
                                   <EmptySpace min="0" pref="230" max="32767" attributes="0"/>
                               </Group>
@@ -281,8 +281,14 @@
         </Component>
         <Component class="javax.swing.JFormattedTextField" name="CampoInserirQuantiaDeposito">
           <Properties>
-            <Property name="toolTipText" type="java.lang.String" value="Inserir Quantia para Depositar"/>
+            <Property name="formatterFactory" type="javax.swing.JFormattedTextField$AbstractFormatterFactory" editor="org.netbeans.modules.form.editors.AbstractFormatterFactoryEditor" preCode="try {" postCode="} catch (java.text.ParseException ex) {&#xa;ex.printStackTrace();&#xa;}">
+              <Format format="#******" subtype="-1" type="5"/>
+            </Property>
+            <Property name="toolTipText" type="java.lang.String" value="Inserir Quantia"/>
           </Properties>
+          <Events>
+            <EventHandler event="keyTyped" listener="java.awt.event.KeyListener" parameters="java.awt.event.KeyEvent" handler="CampoInserirQuantiaDepositoKeyTyped"/>
+          </Events>
         </Component>
       </SubComponents>
     </Container>
