--- a/src/main/java/PacoteInterfaceVisual/PaginaAlterarDados.form
+++ b/src/main/java/PacoteInterfaceVisual/PaginaAlterarDados.form
@@ -149,6 +149,9 @@
         </Component>
         <Component class="javax.swing.JLabel" name="IconeLogo">
           <Properties>
+            <Property name="icon" type="javax.swing.Icon" editor="org.netbeans.modules.form.editors2.IconEditor">
+              <Image iconType="3" name="/images/logoCircular2.png"/>
+            </Property>
             <Property name="text" type="java.lang.String" value="jLabel1"/>
           </Properties>
         </Component>
