--- a/src/main/java/PacoteInterfaceVisual/PaginaPagar.form
+++ b/src/main/java/PacoteInterfaceVisual/PaginaPagar.form
@@ -104,14 +104,13 @@
                           </Group>
                           <EmptySpace min="-2" pref="8" max="-2" attributes="0"/>
                           <Component id="AlterarEmailTitulo" min="-2" max="-2" attributes="0"/>
-                          <EmptySpace max="-2" attributes="0"/>
                       </Group>
                       <Group type="102" alignment="0" attributes="0">
                           <EmptySpace min="-2" pref="30" max="-2" attributes="0"/>
                           <Component id="PerguntasFrequentes" min="-2" pref="22" max="-2" attributes="0"/>
-                          <EmptySpace min="-2" pref="18" max="-2" attributes="0"/>
                       </Group>
                   </Group>
+                  <EmptySpace max="-2" attributes="0"/>
                   <Group type="103" groupAlignment="0" attributes="0">
                       <Component id="BotaoGerarBoletoDeposito" min="-2" max="-2" attributes="0"/>
                       <Component id="CampoInserirQuantiaDeposito" min="-2" pref="34" max="-2" attributes="0"/>
@@ -134,7 +133,7 @@
         <Component class="javax.swing.JLabel" name="IconeLogo">
           <Properties>
             <Property name="icon" type="javax.swing.Icon" editor="org.netbeans.modules.form.editors2.IconEditor">
-              <Image iconType="2" name="C:\NetBeansProjects\sistema-bancario\src\main\resources\images\logoCircular2.png"/>
+              <Image iconType="3" name="/images/logoCircular2.png"/>
             </Property>
             <Property name="text" type="java.lang.String" value="jLabel1"/>
           </Properties>
