--- a/src/main/java/PacoteInterfaceVisual/PaginaSeguranca.form
+++ b/src/main/java/PacoteInterfaceVisual/PaginaSeguranca.form
@@ -88,15 +88,10 @@
                                           <EmptySpace type="separate" max="-2" attributes="0"/>
                                           <Component id="BotaoAlterarSenha" min="-2" max="-2" attributes="0"/>
                                       </Group>
-                                  </Group>
-                                  <EmptySpace pref="238" max="32767" attributes="0"/>
-                              </Group>
-                              <Group type="102" alignment="0" attributes="0">
-                                  <Group type="103" groupAlignment="0" attributes="0">
                                       <Component id="AlterarSenhaTitulo" alignment="0" min="-2" max="-2" attributes="0"/>
                                       <Component id="CampoInserirSenha" alignment="0" min="-2" max="-2" attributes="0"/>
                                   </Group>
-                                  <EmptySpace max="32767" attributes="0"/>
+                                  <EmptySpace pref="238" max="32767" attributes="0"/>
                               </Group>
                           </Group>
                       </Group>
@@ -161,7 +156,7 @@
         <Component class="javax.swing.JLabel" name="IconeLogo">
           <Properties>
             <Property name="icon" type="javax.swing.Icon" editor="org.netbeans.modules.form.editors2.IconEditor">
-              <Image iconType="2" name="C:\NetBeansProjects\sistema-bancario\src\main\resources\images\logoCircular2.png"/>
+              <Image iconType="3" name="/images/logoCircular2.png"/>
             </Property>
             <Property name="text" type="java.lang.String" value="jLabel1"/>
           </Properties>
