fixing issue: not showing Java icon in initial pages

--- a/src/main/java/PacoteInterfaceVisual/PaginaInicialCPF.form
+++ b/src/main/java/PacoteInterfaceVisual/PaginaInicialCPF.form
@@ -205,7 +205,7 @@
         <Component class="javax.swing.JLabel" name="ImagemLogoJava">
           <Properties>
             <Property name="icon" type="javax.swing.Icon" editor="org.netbeans.modules.form.editors2.IconEditor">
-              <Image iconType="2" name="C:\NetBeansProjects\sistema-bancario\src\main\resources\images\java-logo-black-and-white-1.png"/>
+              <Image iconType="3" name="/images/java-logo-black-and-white-1.png"/>
             </Property>
             <Property name="cursor" type="java.awt.Cursor" editor="org.netbeans.modules.form.editors2.CursorEditor">
               <Color id="Default Cursor"/>
