--- a/src/main/java/PacoteInterfaceVisual/PaginaCriarContaSenha.form
+++ b/src/main/java/PacoteInterfaceVisual/PaginaCriarContaSenha.form
@@ -230,6 +230,9 @@
         </Component>
         <Component class="javax.swing.JLabel" name="ImagemLogoJava">
           <Properties>
+            <Property name="icon" type="javax.swing.Icon" editor="org.netbeans.modules.form.editors2.IconEditor">
+              <Image iconType="3" name="/images/java-logo-black-and-white-1.png"/>
+            </Property>
             <Property name="cursor" type="java.awt.Cursor" editor="org.netbeans.modules.form.editors2.CursorEditor">
               <Color id="Default Cursor"/>
             </Property>
